@@ -212,18 +212,8 @@ script_fu_interface (SFScript *script,
   sf_interface = g_new0 (SFInterface, 1);
   sf_interface->widgets = g_new0 (GtkWidget *, script->num_args);
 
-  /* strip the first part of the menupath if it contains _("/Script-Fu/") */
-  tmp = strstr (gettext (script->menu_path), _("/Script-Fu/"));
-
-  if (tmp)
-    sf_interface->title = g_strdup (tmp + strlen (_("/Script-Fu/")));
-  else
-    sf_interface->title = g_strdup (gettext (script->menu_path));
-
   /* strip mnemonics from the menupath */
-  tmp = gimp_strip_uline (sf_interface->title);
-  g_free (sf_interface->title);
-  sf_interface->title = tmp;
+  sf_interface->title = gimp_strip_uline (gettext (script->menu_path));
 
   /* cut off ellipsis */
   tmp = (strstr (sf_interface->title, "..."));
