@@ -1,5 +1,11 @@
 2007-05-16  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/script-fu/script-fu-interface.c (script_fu_interface):
+	removed code that used to deal with full menu paths. All our
+	scripts use script-fu-menu-register now.
+
+2007-05-16  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/script-fu/scripts/selection-round.scm
 	* plug-ins/script-fu/scripts/copy-visible.scm: unmarked strings for
 	translation.
